docs: docs/failures 005 번호 중복 수정 (harness 하네스 업데이트 반영) (#16)
이정범님이 dev에 직접 추가한 005-spotless-googlejavaformat-java25.md가
기존 005-google-java-format-java25.md와 번호가 겹쳐 CLAUDE.md 파일명 규칙을 위반함.
011로 리네임하고 두 문서 간 상호 참조 추가, 최종 적용 상태(1.35.0) 명시.